# log-analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs
backend/src/ingest/: dedup.rs  mod.rs  reader.rs  schema.rs  worker.rs
backend/src/routes/: jobs.rs  mod.rs  sse.rs  upload.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.module.css  Layout.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/i18n/: en.json  index.ts  ja.json
frontend/src/pages/: HomePage.module.css  HomePage.tsx  JobPage.module.css  JobPage.tsx  SettingsPage.module.css  SettingsPage.tsx
frontend/src/types/: index.ts
