[package]
name = "log-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
sha2 = "0.10"
digest = "0.10"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
